@@ -33,7 +33,6 @@ The top box on the Edit Story page has the Story's properties and its Contributo
 <li><b>Title: </b> This is the Title of your Story. Depending on the Story Type it may appear directly in the output. The Title is a required field.</li>
 <li><b>Slug:</b> The slug is a one-word identifier used as the last part of the Story's URI, and the directory in which the story resides. Some Story Types require a slug. For those that do not, you may choose to make a Story a Category Index by checking the box to the right of the slug field. The URL of the Category plus the slug (if any) form the complete URL of the Story, which must be unique.</li>
 <li><b>Cover Date: </b> As on the New Story page, the cover Date defaults to the current date and time, but it can be modified to a future or previous date. The cover date is a required field and may appear on some Story Types directly in the URL or the page.</li>
-<li><b>Priority: </b> This is a required field that defaults to Medium. You can denote a story as a High Priority. </li>
 <li><b>Contributors: </b> A contributor can be any person, ex. Writer or photographer who contributed to the Story. Click on <i>Edit Contributors</i> to associate, or un-associate your contributors. See <a href="help.pl?topic=contributor_associate" class="helplink">Associate Contributors</a> for additional Help.</li>
 </ul>
 
